# RAFT

./: .gitignore  .gitmodules  CMakeLists.txt
include/: IServer.hpp  LogEntry.hpp  Message.hpp  Server.hpp  TimeKeeper.hpp
src/: Message.cpp  MessageImpl.cpp  MessageImpl.hpp  Server.cpp
test/: CMakeLists.txt  ServerTests.cpp
